# aoc2024-rust

./: .gitignore  Cargo.toml
src/day1/part1/: main.rs
src/day1/part2/: main.rs
src/day2/part1/: main.rs
src/day2/part2/: main.rs
src/day3/part1/: main.rs
src/day3/part2/: main.rs
src/day4/part1/: main.rs
src/day4/part2/: main.rs
src/day5/part1/: main.rs
src/day5/part2/: main.rs
src/day6/part1/: main.rs
src/day6/part2/: main.rs
