[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "day1part1"
path = "src/day1/part1/main.rs"

[[bin]]
name = "day1part2"
path = "src/day1/part2/main.rs"

[[bin]]
name = "day2part1"
path = "src/day2/part1/main.rs"

[[bin]]
name = "day2part2"
path = "src/day2/part2/main.rs"

[[bin]]
name = "day3part1"
path = "src/day3/part1/main.rs"

[[bin]]
name = "day3part2"
path = "src/day3/part2/main.rs"

[[bin]]
name = "day4part1"
path = "src/day4/part1/main.rs"

[[bin]]
name = "day4part2"
path = "src/day4/part2/main.rs"

[[bin]]
name = "day5part1"
path = "src/day5/part1/main.rs"

[[bin]]
name = "day5part2"
path = "src/day5/part2/main.rs"